--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,14 @@
 #home-container {
-    background-color: #2b2a2b;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4%
 }
