--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,8 @@
+#home-container {
+    display: flex;
+    justify-content: center;
+}
+
 #profile-pic {
     display: flex;
     width: 30%;
@@ -6,8 +11,8 @@
     align-items: center;
     margin: auto;
     margin-top: 10vh;
+    border: 10px #000000;
     border-radius: 5px;
-    border-color: black;
 }
 
 #summary-container {
@@ -16,6 +21,7 @@
     align-items: center;
     margin: auto;
     margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin-bottom: 10vh;
     max-width: 40%;
+    text-align: justify;
 }
