Removed unnecessary files

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,4 +1,4 @@
-#home-container {
+/* #home-container {
     display: flex;
     justify-content: center;
 }
@@ -24,4 +24,4 @@
     margin-bottom: 10vh;
     max-width: 40%;
     text-align: justify;
-}
+} */
