Started adjustments to update website
- Changed font family from Abadi to Ubuntu
- Restructured text content and resized font sizes to make sections less overwhelming
- Added consulting experience to experiences section
- Added new skills section
- Removed old skill tags component
- Archived old projects display

--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'CustomFont';
-    src: url('./abadi-mt-extra-light.ttf') format('truetype');
+    src: url('./Ubuntu-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
